--- a/public/styles.css
+++ b/public/styles.css
@@ -3,13 +3,14 @@ h1 {
   margin: 8px 0;
 }
 
-.CodeMirror-scroll {
+.CodeMirror {
   height: 600px;
 }
 
 #overlay {
   background: rgba(255, 255, 255, 0.5);
   z-index: 1338;
+  pointer-events: none;
   position: absolute; left: 0; right: 0; top: 0; bottom: 0;
 }
 
