update compontents; use development version of CodeMirror

--- a/public/components/codemirror/doc/compress.html
+++ b/public/components/codemirror/doc/compress.html
@@ -89,8 +89,10 @@
           <option value="http://codemirror.net/mode/javascript/javascript.js">javascript.js</option>
           <option value="http://codemirror.net/mode/jinja2/jinja2.js">jinja2.js</option>
           <option value="http://codemirror.net/mode/less/less.js">less.js</option>
+          <option value="http://codemirror.net/mode/livescript/livescript.js">livescript.js</option>
           <option value="http://codemirror.net/mode/lua/lua.js">lua.js</option>
           <option value="http://codemirror.net/mode/markdown/markdown.js">markdown.js</option>
+          <option value="http://codemirror.net/mode/mirc/mirc.js">mirc.js</option>
           <option value="http://codemirror.net/mode/mysql/mysql.js">mysql.js</option>
           <option value="http://codemirror.net/mode/ntriples/ntriples.js">ntriples.js</option>
           <option value="http://codemirror.net/mode/ocaml/ocaml.js">ocaml.js</option>
@@ -118,6 +120,7 @@
           <option value="http://codemirror.net/mode/sql/sql.js">sql.js</option>
           <option value="http://codemirror.net/mode/sparql/sparql.js">sparql.js</option>
           <option value="http://codemirror.net/mode/stex/stex.js">stex.js</option>
+          <option value="http://codemirror.net/mode/tcl/tcl.js">tcl.js</option>
           <option value="http://codemirror.net/mode/tiddlywiki/tiddlywiki.js">tiddlywiki.js</option>
           <option value="http://codemirror.net/mode/tiki/tiki.js">tiki.js</option>
           <option value="http://codemirror.net/mode/turtle/turtle.js">turtle.js</option>
