--- a/public/components/codemirror/index.html
+++ b/public/components/codemirror/index.html
@@ -75,6 +75,7 @@
       <li><a href="mode/sql/index.html">SQL</a> (several dialects)</li>
       <li><a href="mode/sparql/index.html">SPARQL</a></li>
       <li><a href="mode/stex/index.html">sTeX, LaTeX</a></li>
+      <li><a href="mode/tcl/index.html">Tcl</a></li>
       <li><a href="mode/vb/index.html">VB.NET</a></li>
       <li><a href="mode/vbscript/index.html">VBScript</a></li>
       <li><a href="mode/velocity/index.html">Velocity</a></li>
@@ -126,7 +127,7 @@
       <li><a href="https://script.google.com/">Google Apps Script</a></li>
       <li><a href="https://github.com/github/android">GitHub's Android app</a></li>
       <li><a href="http://eloquentjavascript.net/chapter1.html">Eloquent JavaScript</a> (book)</li>
-      <li><a href="http://media.chikuyonok.ru/codemirror2/">Zen Coding</a> (fast XML editing)</li>
+      <li><a href="http://emmet.io">Emmet</a> (fast XML editing)</li>
       <li><a href="http://paperjs.org/">Paper.js</a> (graphics scripting)</li>
       <li><a href="http://codev.it/">Codev</a> (collaborative IDE)</li>
       <li><a href="http://enjalot.com/tributary/2636296/sinwaves.js">Tributary</a> (augmented editing)</li>
